--- a/TestGUI/Browser.xaml
+++ b/TestGUI/Browser.xaml
@@ -1,28 +1,58 @@
 ﻿<Window x:Class="TestGUI.Browser"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:objects="clr-namespace:dotGit.Objects;assembly=dotGit"
     Title="Repository Browser" MinHeight="423" MinWidth="568">
+    <Window.Resources>
+        <HierarchicalDataTemplate DataType="{x:Type objects:Tree}" ItemsSource="{Binding Path=Children}">
+            <TextBlock Text="{Binding Path}" TextTrimming="CharacterEllipsis" ToolTip="{Binding SHA}"/>
+        </HierarchicalDataTemplate>
+        <DataTemplate DataType="{x:Type objects:Blob}">
+            <TextBlock Text="{Binding Path}" TextTrimming="CharacterEllipsis" Foreground="CornflowerBlue" ToolTip="{Binding SHA}"/>
+        </DataTemplate>
+    </Window.Resources>
     <DockPanel>
         <!--<Label  DockPanel.Dock="Top">Repository Browser</Label>-->
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,0,0,5">
             <Label>Repository Url:</Label>
-            <TextBox Name="m_url_textbox">..\..\..\Test\Resources\TestRepo</TextBox>
-            <Button Click="Button_Click">Walk!</Button>
+            <TextBox Name="m_url_textbox">..\..\..\</TextBox>
+            <Button Click="Button_Click" Margin="5,0,0,0">Load</Button>
         </StackPanel>
-        <ListView Name="m_list" DockPanel.Dock="Top">
-            <ListView.View>
-                <GridView>
-                    <GridView.Columns>
-                        <GridViewColumn Header="SHA" DisplayMemberBinding="{Binding Path=SHA}" />
-                        <GridViewColumn Header="Message" DisplayMemberBinding="{Binding Path=Message}"/>
-                        <GridViewColumn Header="Committer" DisplayMemberBinding="{Binding Path=Committer}"/>
-                        <GridViewColumn Header="CommitedDate" DisplayMemberBinding="{Binding Path=CommittedDate}"/>
-                        <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Path=Author}"/>
-                        <GridViewColumn Header="AuthoredDate" DisplayMemberBinding="{Binding Path=AuthoredDate}"/>
-                        <GridViewColumn Header="Size" DisplayMemberBinding="{Binding Path=Size}" />
-                    </GridView.Columns>
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            
+            <!--commits-->
+            <DockPanel>
+                <TextBlock DockPanel.Dock="Top" Background="Silver">Commits</TextBlock>
+            <ListView Name="m_list" DockPanel.Dock="Top">
+                <ListView.View>
+                    <GridView>
+                        <GridView.Columns>
+                            <GridViewColumn Header="SHA" DisplayMemberBinding="{Binding Path=SHA}" />
+                            <GridViewColumn Header="Message" DisplayMemberBinding="{Binding Path=Message}"/>
+                            <GridViewColumn Header="Committer" DisplayMemberBinding="{Binding Path=Committer}"/>
+                            <GridViewColumn Header="CommitedDate" DisplayMemberBinding="{Binding Path=CommittedDate}"/>
+                            <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Path=Author}"/>
+                            <GridViewColumn Header="AuthoredDate" DisplayMemberBinding="{Binding Path=AuthoredDate}"/>
+                            <GridViewColumn Header="Size" DisplayMemberBinding="{Binding Path=Size}" />
+                        </GridView.Columns>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+                </DockPanel>
+            <GridSplitter Width="2" Grid.Column="1" ResizeBehavior="PreviousAndNext"/>
+            
+            <!--tree-->
+            <DockPanel  Grid.Column="2">
+                <TextBlock DockPanel.Dock="Top" Background="Silver">Repository</TextBlock>
+                <TreeView Name="m_tree">
+
+                </TreeView>
+            </DockPanel>
+        </Grid>
     </DockPanel>
 </Window>
